# sheet-music-rename

./: .gitignore  CHANGELOG.md  README.md  main.py  ocr-score-rename.spec  pyproject.toml
.github/workflows/: build.yml
ocr_score_rename/: __init__.py  __main__.py  clef.py  clef_vision.py  config.py  config_dialog.py  gui.py  instruments.py  naming.py  ocr.py  page_regions.py  rename.py  synonym_validation.py  tesseract_runtime.py  text_normalize.py  title.py
ocr_score_rename/data/: instruments.yaml
scripts/: stage_tesseract.py
tests/: test_clef.py  test_config.py  test_instruments.py  test_naming.py  test_ocr.py  test_rename.py  test_synonym_validation.py  test_tesseract_runtime.py  test_title.py
