[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr-score-rename"
version = "1.0.0"
description = "Rename scanned PDF scores by OCR-detected instrument"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "numpy>=1.26,<2",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
ocr-score-rename = "ocr_score_rename.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["ocr_score_rename"]

[tool.hatch.build.targets.wheel.force-include]
"ocr_score_rename/data" = "ocr_score_rename/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
